[Bhargavi]Added: Notes Models

--- a/FundooNotes/FundooNotes.csproj
+++ b/FundooNotes/FundooNotes.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\FundooModels\FundooModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
