[Bhargavi]Refactored: Login Api with token

--- a/FundooNotes/Properties/launchSettings.json
+++ b/FundooNotes/Properties/launchSettings.json
@@ -1,17 +1,16 @@
 ﻿{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:40948",
       "sslPort": 44361
     }
   },
   "profiles": {
-    "FundooNotes": {
+    "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-     
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
